# kitakita

./: .gitignore  BootTidal.hs  CLAUDE.md  README.md  TidalCycles-Studio.bat  index.html  kitakita.cabal  osc-runner.js  package-lock.json  package.json  package.yaml  stack.yaml  vite.config.vscode.js  vscode-strudel-bundle.js
.claude/: settings.local.json
doc/: STRUDEL_SAMPLES.md  VSCODE_STRUDEL.md
doc/adr/: 001-synth-first-for-agent-dtm.md
examples/: 808bd.tidal  house.tidal
examples/tidal/: 808bd.tidal
scripts/: reaper-relink.sh
src/: drum.tidal  test.tidal
src/reaper-python/: .gitignore  README.md  arrangement.toml  pyproject.toml  song.py  spec.py
src/reaper-python/isobar/: compose.py
src/reaper-python/isobar/patterns/: kick_909.py
src/reaper-python/kita/: __init__.py  cli.py  duck.py  midi.py  model.py  patterns.py  sim.py
src/reaper-python/kita/reaper/: bridge.py  load.py  proc.py  reconcile.py  transport.py
src/reaper-python/reaper/: _rea.py  analyze.py  control.py  load.py  setup.py  status.py  transport.py
src/reaper-python/samples/: gen_kick.py
src/strudel/: hello.str  piano.str  playground.str  tutorial.str
src/strudel/examples/: dark_psy.str  minimal_dark_asid.str  trance_coding.str  trance_coding2.str
src/tidal/: drum.tidal
ui/: watch.html
