[project]
name = "reaper-python"
version = "0.1.0"
requires-python = ">=3.11,<3.13"  # reapy-next が依存する lib2to3 は 3.13 で削除された
dependencies = [
    "isobar>=0.2.1",
    "mido>=1.3.3",
    "numpy>=2.0",  # kita/sim.py が直接使う (ミックス計測)
    "reapy-next>=0.10.1",
    "reathon>=0.0.9",
]

[project.scripts]
kita = "kita.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kita"]
